# Readout-Visible-Coherence-QNN

./: LICENSE  README.md  pyproject.toml  requirements.txt  run_pipeline_full.ipynb  verify_results.py
Results/: empirical_alignment_ratio.csv  phase0_activity_maps.csv  phase10_fixed_channel_linearity.csv  phase10_perturbative_fits.csv  phase10_perturbative_micro.csv  phase11_n_scaling.csv  phase11_n_scaling_summary.csv  phase12_r2_sector.csv  phase13_open_chain.csv  phase14_aniso_noise.csv  phase15_alignment.csv  phase15_alignment_summary.csv  phase16_predictor_extended.csv  phase17_loo.csv  phase17_mixed_effects.csv  phase17_perm_null.npy  phase17_permutation.csv  phase17_robust_ci.csv  phase18_hea_baseline.csv  phase19_robust_ts.csv  phase1_depth_sweep.csv  phase20_beta_vs_cutoff.csv  phase2_sector_r2.csv  phase3_teacher_ensemble.csv  phase4_extended_channels.csv  phase5_lambda_coh.csv  phase6_loco.csv  phase7_loss_grad.csv  phase9_partial_r2_audit.csv  phase9_predictor_comparison.csv  phase9_relative_degradation.csv  phase_baselines.csv  pooled_with_baselines.csv  pooled_with_extended_metrics.csv  summary.csv
