[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "readout-visible-coherence-qnn"
version = "1.0.0"
description = "Sector coherence and trainability in noisy equivariant quantum neural networks: simulations, analysis, and reproducibility toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Hassan Ugail" },
    { name = "Newton Howard" },
]
keywords = [
    "quantum neural networks",
    "equivariant quantum circuits",
    "barren plateaus",
    "open quantum systems",
    "quantum machine learning",
    "trainability",
    "sector coherence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
verify = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.urls]
Repository = "https://github.com/ugail/Readout-Visible-Coherence-QNN"
